<resources>
    <string name="app_name">XML Layout</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="res_tip">Total Tip is: </string>
</resources>